# Applications

./: Makefile.am  configure.ac
Demos/: Makefile.am
Games/: Makefile.am
M4/: tal-subdirs.m4
Utilities/: Makefile.am
